# machinelearningeducation

./: CMakeLists.txt  README.md
LinearRegression/: CMakeLists.txt  main.cpp
SingleFormalNeuron/: CMakeLists.txt  main.cpp
SingleFormalNeuronTraining/: CMakeLists.txt  main.cpp
XORNeuralNetwork/: CMakeLists.txt  main.cpp
